Fix z-index of gallery

--- a/css/src/blueimp-gallery.scss
+++ b/css/src/blueimp-gallery.scss
@@ -72,7 +72,7 @@
 
 .blueimp-gallery-carousel {
   position: relative;
-  z-index: auto;
+  z-index: 999999;
   margin: 1em auto;
   padding-bottom: 56.25%;
   box-shadow: 0 0 10px #000;
