--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -1163,7 +1163,7 @@ blockquote {
 .body-wrapper {
   padding-top: 0;
   padding-bottom: 0;
-  z-index: 0;
+  z-index: auto;
 }
 
 b {
@@ -1334,7 +1334,7 @@ time {
   float: right;
   padding: 0;
   height: 80px;
-  z-index: 10000;
+  z-index: 1000;
 }
 
 .navigation > li {
